# elpedeefo

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  TextOutputDev.cc  XPDFBUILD.sln  XPDFBUILD.vcxproj  XPDFBUILD.vcxproj.filters  parseargs.c  pch.h  pdfdetach.cc  pdffonts.cc  pdfimages.cc  pdfinfo.cc  pdftohtml.cc  pdftopng.cc  pdftoppm.cc  pdftops.cc  pdftotext.cc  pdftotext.h  test.c  vcpkg-configuration.json  vcpkg.json
external_include/: pdftotext.h
include/: aconf.h
