cmake_minimum_required(VERSION 4.0)
project(XPDFBUILD)

set(CMAKE_CXX_STANDARD 14)

# include_directories(.)
include_directories(include)
# include_directories(vcpkg_installed)
# include_directories(vcpkg_installed/x64-windows)
# include_directories(vcpkg_installed/x64-windows/x64-windows)
# include_directories(vcpkg_installed/x64-windows/x64-windows/bin)
# include_directories(vcpkg_installed/x64-windows/x64-windows/lib)
include_directories(vcpkg_installed/x64-windows/x64-windows/include)
# include_directories(vcpkg_installed/x64-windows/x64-windows/include/brotli)
# include_directories(vcpkg_installed/x64-windows/x64-windows/include/freetype)
# include_directories(vcpkg_installed/x64-windows/x64-windows/include/freetype/config)
include_directories(vcpkg_installed/x64-windows/x64-windows/include/libpng16)
# add_subdirectory(vcpkg_installed/x64-windows/x64-windows/bin)
# find_library(freetype_LIBRARY_PATH freetype.lib)

link_directories(vcpkg_installed/x64-windows/x64-windows/lib)

add_library(XPDFBUILD SHARED
        include/aconf.h
        vcpkg_installed/x64-windows/x64-windows/include/brotli/decode.h
        vcpkg_installed/x64-windows/x64-windows/include/brotli/encode.h
        vcpkg_installed/x64-windows/x64-windows/include/brotli/port.h
        vcpkg_installed/x64-windows/x64-windows/include/brotli/shared_dictionary.h
        vcpkg_installed/x64-windows/x64-windows/include/brotli/types.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/ftconfig.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/ftheader.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/ftmodule.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/ftoption.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/ftstdlib.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/integer-types.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/mac-support.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/config/public-macros.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/freetype.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftadvanc.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftbbox.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftbdf.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftbitmap.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftbzip2.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftcache.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftchapters.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftcid.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftcolor.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftdriver.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/fterrdef.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/fterrors.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftfntfmt.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftgasp.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftglyph.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftgxval.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftgzip.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftimage.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftincrem.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftlcdfil.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftlist.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftlogging.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftlzw.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftmac.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftmm.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftmodapi.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftmoderr.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftotval.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftoutln.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftparams.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftpfr.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftrender.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftsizes.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftsnames.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftstroke.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftsynth.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftsystem.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/fttrigon.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/fttypes.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ftwinfnt.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/otsvg.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/t1tables.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/ttnameid.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/tttables.h
        vcpkg_installed/x64-windows/x64-windows/include/freetype/tttags.h
        vcpkg_installed/x64-windows/x64-windows/include/libpng16/png.h
        vcpkg_installed/x64-windows/x64-windows/include/libpng16/pngconf.h
        vcpkg_installed/x64-windows/x64-windows/include/libpng16/pnglibconf.h
        vcpkg_installed/x64-windows/x64-windows/include/bzlib.h
        vcpkg_installed/x64-windows/x64-windows/include/ft2build.h
        vcpkg_installed/x64-windows/x64-windows/include/png.h
        vcpkg_installed/x64-windows/x64-windows/include/pngconf.h
        vcpkg_installed/x64-windows/x64-windows/include/pnglibconf.h
        vcpkg_installed/x64-windows/x64-windows/include/zconf.h
        vcpkg_installed/x64-windows/x64-windows/include/zlib.h
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/bzip2.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/freetype2.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/libbrotlicommon.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/libbrotlidec.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/libbrotlienc.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/libpng.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/libpng16.pc
        vcpkg_installed/x64-windows/x64-windows/lib/pkgconfig/zlib.pc
        AcroForm.cc
        AcroForm.h
        Annot.cc
        Annot.h
        Array.cc
        Array.h
        BuiltinFont.cc
        BuiltinFont.h
        BuiltinFontTables.cc
        BuiltinFontTables.h
        Catalog.cc
        Catalog.h
        CharCodeToUnicode.cc
        CharCodeToUnicode.h
        CharTypes.h
        CMap.cc
        CMap.h
        CompactFontTables.h
        config.h
        Decrypt.cc
        Decrypt.h
        Dict.cc
        Dict.h
        DisplayState.cc
        DisplayState.h
        dllmain.cpp
        Error.cc
        Error.h
        ErrorCodes.h
        FixedPoint.cc
        FixedPoint.h
        FoFiBase.cc
        FoFiBase.h
        FoFiEncodings.cc
        FoFiEncodings.h
        FoFiIdentifier.cc
        FoFiIdentifier.h
        FoFiTrueType.cc
        FoFiTrueType.h
        FoFiType1.cc
        FoFiType1.h
        FoFiType1C.cc
        FoFiType1C.h
        FontEncodingTables.cc
        FontEncodingTables.h
        framework.h
        Function.cc
        Function.h
        gfile.cc
        gfile.h
        Gfx.cc
        Gfx.h
        GfxFont.cc
        GfxFont.h
        GfxState.cc
        GfxState.h
        GHash.cc
        GHash.h
        GList.cc
        GList.h
        GlobalParams.cc
        GlobalParams.h
        gmem.cc
        gmem.h
        gmempp.cc
        gmempp.h
        GMutex.h
        GString.cc
        GString.h
        gtypes.h
        HTMLGen.cc
        HTMLGen.h
        ImageOutputDev.cc
        ImageOutputDev.h
        JArithmeticDecoder.cc
        JArithmeticDecoder.h
        JBIG2Stream.cc
        JBIG2Stream.h
        JPXStream.cc
        JPXStream.h
        Lexer.cc
        Lexer.h
        Link.cc
        Link.h
        NameToCharCode.cc
        NameToCharCode.h
        NameToUnicodeTable.h
        Object.cc
        Object.h
        OptionalContent.cc
        OptionalContent.h
        Outline.cc
        Outline.h
        OutputDev.cc
        OutputDev.h
        Page.cc
        Page.h
        parseargs.c
        parseargs.h
        Parser.cc
        Parser.h
        pch.cpp
        pch.h
        PDF417Barcode.cc
        PDF417Barcode.h
        PDFCore.cc
        PDFCore.h
        pdfdetach.cc
        PDFDoc.cc
        PDFDoc.h
        PDFDocEncoding.cc
        PDFDocEncoding.h
        pdffonts.cc
        pdfimages.cc
        pdfinfo.cc
        pdftohtml.cc
        pdftopng.cc
        pdftoppm.cc
        pdftops.cc
        pdftotext.cc
        pdftotext.h
        PreScanOutputDev.cc
        PreScanOutputDev.h
        PSOutputDev.cc
        PSOutputDev.h
        PSTokenizer.cc
        PSTokenizer.h
        SecurityHandler.cc
        SecurityHandler.h
        ShadingImage.cc
        ShadingImage.h
        Splash.cc
        Splash.h
        SplashBitmap.cc
        SplashBitmap.h
        SplashClip.cc
        SplashClip.h
        SplashErrorCodes.h
        SplashFont.cc
        SplashFont.h
        SplashFontEngine.cc
        SplashFontEngine.h
        SplashFontFile.cc
        SplashFontFile.h
        SplashFontFileID.cc
        SplashFontFileID.h
        SplashFTFont.cc
        SplashFTFont.h
        SplashFTFontEngine.cc
        SplashFTFontEngine.h
        SplashFTFontFile.cc
        SplashFTFontFile.h
        SplashGlyphBitmap.h
        SplashMath.h
        SplashOutputDev.cc
        SplashOutputDev.h
        SplashPath.cc
        SplashPath.h
        SplashPattern.cc
        SplashPattern.h
        SplashScreen.cc
        SplashScreen.h
        SplashState.cc
        SplashState.h
        SplashTypes.h
        SplashXPath.cc
        SplashXPath.h
        SplashXPathScanner.cc
        SplashXPathScanner.h
        Stream-CCITT.h
        Stream.cc
        Stream.h
        TextOutputDev.cc
        TextOutputDev.h
        TextString.cc
        TextString.h
        TileCache.cc
        TileCache.h
        TileCompositor.cc
        TileCompositor.h
        TileMap.cc
        TileMap.h
        Trace.cc
        Trace.h
        UnicodeMap.cc
        UnicodeMap.h
        UnicodeMapTables.h
        UnicodeRemapping.cc
        UnicodeRemapping.h
        UnicodeTypeTable.cc
        UnicodeTypeTable.h
        UTF8.cc
        UTF8.h
        WebFont.cc
        WebFont.h
        XFAScanner.cc
        XFAScanner.h
        XRef.cc
        XRef.h
        Zoox.cc
        Zoox.h)

target_link_libraries(XPDFBUILD
	freetype
    libpng16
    zlib)